# Projet-M1-S1

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  info.json  logs-dev-core.sh  logs-dev-ui.sh  logs-prod-core.sh  logs-prod-ui.sh  package-lock.json  test.txt
back/: .env  Cargo.toml  Dockerfile  Dockerfile.OLD  Dockerfile.dev  Dockerfile.dev_tmp  Dockerfile.prod  generate-bindings.sh  start-clickhouse.sh  start-database.sh
back/bindings/: ComposeData.ts  Container.ts  ContainerList.ts  ContainerPortRebind.ts  ContainerPortRebindRequest.ts  ContainerStatisticsRow.ts  ContainerStatsResponse.ts  ImageList.ts  ImageResponse.ts  LoginResponse.ts  MyRow.ts  NetworkContainerData.ts  OurIpamConfig.ts  OurNetwork.ts  OurPortTypeEnum.ts  OverviewResponse.ts  PortsResponse.ts  SimplePortData.ts  Topology.ts  TopologyContainer.ts  VolumeExplorerData.ts
back/migrations/: 20231212135315_init.sql
back/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
back/resources/: clickhouse_init.sql  clickhouse_init_containers.sql  clickhouse_init_volumes.sql
back/sqlite/: init_db.sql
back/src/: auth.rs  composes.rs  containers.rs  database.rs  db.rs  dns.rs  docker.rs  icons.rs  image.rs  images.rs  infos.rs  main.rs  models.rs  networks.rs  overview.rs  ports.rs  schema.rs  sniffer.rs  sqlitedb.rs  state.rs  stats.rs  topology.rs  utils.rs  volumes.rs  web.rs
back/src/containers/: common.rs  handlers.rs  mod.rs  models.rs  register.rs
back/src/images/: common.rs  handlers.rs  mod.rs  models.rs  register.rs
back/src/networks/: common.rs  handlers.rs  mod.rs  models.rs  register.rs
back/src/resources/: init_db.sql
back/src/sqlite/: init_db.sql
back/src/volumes/: common.rs  handlers.rs  models.rs  register.rs
caddy_etc/: Caddyfile
doc/: api.md
front/: .env  .prettierrc  Dockerfile  Dockerfile.dev  Dockerfile.prod  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs
front/src/: app.html  app.postcss  hooks.server.ts
front/src/components/: Chart.svelte  ContainerChart.svelte  FileExplorer.svelte  (+7 more)
(+126 files in other folders)
