[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.15.0"
diesel = { version = "2.1.4", features = ["postgres"] }
dotenvy = "0.15.7"
fs_extra = "1.3.0"
futures = "0.3.29"
futures-util = "0.3.29"
json = "0.12.4"
lazy_static = "1.4.0"
rocket = {version = "0.5.0", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
tokio = "1.34.0"
