[package]
name = "back"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.15.0"
chrono = "0.4.31"
diesel = { version = "2.1.4", features = ["postgres", "time", "chrono", "serde_json"] }
dotenvy = "0.15.7"
fs_extra = "1.3.0"
futures = "0.3.29"
futures-util = "0.3.29"
json = "0.12.4"
lazy_static = "1.4.0"
rocket = {version = "0.5.0", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
tokio = "1.34.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "time" ] }
clickhouse = "0.11.6"
ts-rs = "8.1.0"
base64 = "0.22.0"
reqwest = "0.12.2"
regex = "1.10.4"
debug_stub_derive = "0.3.0"
serde_yaml = "0.9.34"
pnet = "0.34.0"
jsonwebtoken = "9.3.0"
